tests/errors/init_state/ref_obligations/uninit_ref_write_without_moveback_leaks.sim
fn f(r: &uninit i64) {
  entry:
    r.* = 42;
    return
}
