tests/errors/init_state/ref_obligations/uninit_ref_write_without_moveback_leaks.err.expected
error: at 4:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation here (is_init=true, ends_init=false)
   |
 4 |     return
   |     ^^^^^^
